--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -2,11 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>realtime-csharp</PackageId>
+    <Authors>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Authors>
+    <Description>Realtime-csharp is written as a client library for supabase/realtime.</Description>
+    <RootNamespace>Supabase.Realtime</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="postgrest-csharp" Version="1.0.0" />
     <PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attributes\" />
   </ItemGroup>
 </Project>
