--- a/RealtimeTests/RealtimeTests.csproj
+++ b/RealtimeTests/RealtimeTests.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Realtime\Realtime.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
