--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,27 @@ version: "2.3"
 
 services:
   realtime:
-    image: supabase/realtime:latest
+    image: supabase/realtime
     ports:
-      - 4000:4000
-    depends_on:
-      - db
+      - "4000:4000"
     environment:
-      - DB_HOST=db
-      - DB_NAME=postgres
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_PORT=5432
-      - SECRET_KEY_BASE=A_SUPER_SECRET_KEY
-
+      DB_HOST: db
+      DB_NAME: postgres
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_PORT: 5432
+      PORT: 4000
+      HOSTNAME: localhost
+      SECRET_KEY_BASE: SOMETHING_SUPER_SECRET
   db:
-    image: postgres:12
+    image: supabase/postgres
     ports:
-      - "6543:5432"
+      - "5432:5432"
     volumes:
-      - ./RealtimeTests/db:/docker-entrypoint-initdb.d/
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
+    - ./RealtimeTests/db:/docker-entrypoint-initdb.d/
+    command:
+    - postgres
+    - -c
+    - wal_level=logical
+    environment: 
       POSTGRES_PASSWORD: postgres
-      POSTGRES_PORT: 5432
