Update Nuget Package generation info

--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -7,6 +7,16 @@
     <Description>Realtime-csharp is written as a client library for supabase/realtime.</Description>
     <RootNamespace>Supabase.Realtime</RootNamespace>
     <ReleaseVersion>1.0.0</ReleaseVersion>
+    <PackOnBuild>true</PackOnBuild>
+    <Copyright>MIT</Copyright>
+    <PackageIconUrl>https://avatars.githubusercontent.com/u/54469796?s=200&amp;v=4</PackageIconUrl>
+    <NeutralLanguage>en</NeutralLanguage>
+    <PackageLicenseUrl>https://github.com/supabase/realtime-csharp/blob/master/LICENSE</PackageLicenseUrl>
+    <Owners>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Owners>
+    <PackageProjectUrl>https://github.com/supabase/realtime-csharp</PackageProjectUrl>
+    <Summary>Realtime-csharp is written as a client library for supabase/realtime.</Summary>
+    <PackageTags>supabase, realtime, phoenix</PackageTags>
+    <Title>realtime-csharp</Title>
   </PropertyGroup>
 
   <ItemGroup>
