Add package version 1.0.0

--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -7,6 +7,7 @@
     <Description>Realtime-csharp is written as a client library for supabase/realtime.</Description>
     <RootNamespace>Supabase.Realtime</RootNamespace>
     <ReleaseVersion>1.0.0</ReleaseVersion>
+    <PackageVersion>1.0.0</PackageVersion>
     <PackOnBuild>true</PackOnBuild>
     <Copyright>MIT</Copyright>
     <PackageIconUrl>https://avatars.githubusercontent.com/u/54469796?s=200&amp;v=4</PackageIconUrl>
