--- a/RealtimeExample/RealtimeExample.csproj
+++ b/RealtimeExample/RealtimeExample.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ReleaseVersion>1.0.3</ReleaseVersion>
   </PropertyGroup>
 
   <ItemGroup>
