--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       
-      #- name: Test
-      #  run: dotnet test --no-restore
+      - name: Test
+        run: dotnet test --no-restore
