--- a/RealtimeExample/RealtimeExample.csproj
+++ b/RealtimeExample/RealtimeExample.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <ReleaseVersion>4.0.0</ReleaseVersion>
+    <ReleaseVersion>4.0.1</ReleaseVersion>
   </PropertyGroup>
 
   <ItemGroup>
