--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -32,12 +32,10 @@
 		<Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="postgrest-csharp" Version="2.1.1" />
+		<PackageReference Include="postgrest-csharp" Version="3.0.1" />
+		<PackageReference Include="supabase-core" Version="0.0.2" />
 		<PackageReference Include="Websocket.Client" Version="4.4.43" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="Attributes\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Converters\" />
