--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -21,7 +21,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<Nullable>enable</Nullable>
-		<LangVersion>9.0</LangVersion>
+		<LangVersion>latest</LangVersion>
 		<WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Version)' == '' ">
