Restructure examples into a single folder

--- a/Examples/RealtimeExample/RealtimeExample.csproj
+++ b/Examples/RealtimeExample/RealtimeExample.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Realtime\Realtime.csproj" />
+    <ProjectReference Include="..\..\Realtime\Realtime.csproj" />
   </ItemGroup>
 
 </Project>
