--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install dependencies
         run: dotnet restore
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
+      - name: Build Realtime
+        run: dotnet build ./Realtime/Realtime.csproj --configuration Release --no-restore
 
       - name: Test
-        run: dotnet test --no-restore
+        run: dotnet test ./RealtimeTests/RealtimeTests.csproj --no-restore
