--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,6 +23,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.301
+          
+      - name: Initialize Testing Stack
+        run: docker-compose up -d
 
       - name: Install dependencies
         run: dotnet restore
