Cleanup / Refactor codebase (#28)
* Cleanup unused `using` directives

* Enable nullability on tests (prior to refactor)

* In progress: Continued refactor of events/naming/structure

* Update codebase changes on test and example projects so that solution builds

* Refactor to using `delegates` instead of `EventHandlers`

* Update tests to connect to local socket server instead of hosted

* Tests now build and use local file

--- a/RealtimeTests/RealtimeTests.csproj
+++ b/RealtimeTests/RealtimeTests.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
 
 		<IsPackable>false</IsPackable>
+
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 	<PropertyGroup>
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
+		<WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
 	</PropertyGroup>
 	
 	<ItemGroup>
