--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,6 +23,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.x'
+      
+      - name: Add hosts to /etc/hosts
+        run: |
+          sudo echo "127.0.0.1 realtime-dev.localhost" | sudo tee -a /etc/hosts
           
       - name: Initialize Testing Stack
         run: docker-compose up -d
