--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -1,46 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<PackageId>realtime-csharp</PackageId>
-		<Authors>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Authors>
-		<Description>Realtime-csharp is written as a client library for supabase/realtime.</Description>
-		<RootNamespace>Supabase.Realtime</RootNamespace>
-		<PackOnBuild>true</PackOnBuild>
-		<Copyright>MIT</Copyright>
-		<PackageIconUrl>https://avatars.githubusercontent.com/u/54469796?s=200&amp;v=4</PackageIconUrl>
-		<NeutralLanguage>en</NeutralLanguage>
-		<PackageLicenseUrl>https://github.com/supabase/realtime-csharp/blob/master/LICENSE</PackageLicenseUrl>
-		<Owners>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Owners>
-		<PackageProjectUrl>https://github.com/supabase/realtime-csharp</PackageProjectUrl>
-		<Summary>Realtime-csharp is written as a client library for supabase/realtime.</Summary>
-		<PackageTags>supabase, realtime, phoenix</PackageTags>
-		<Title>realtime-csharp</Title>
-		<PackageVersion>6.0.0</PackageVersion>
-		<ReleaseVersion>6.0.0</ReleaseVersion>
-	</PropertyGroup>
-	<PropertyGroup>
-		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
-		<WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
-	</PropertyGroup>
-	<PropertyGroup>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Version)' == '' ">
-		<VersionPrefix Condition=" '$(VersionPrefix)' == '' ">5.0.5</VersionPrefix>
-		<VersionSuffix Condition=" '$(VersionSuffix)' == '' ">
-		</VersionSuffix>
-		<Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
-		<Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="postgrest-csharp" Version="3.1.3" />
-		<PackageReference Include="supabase-core" Version="0.0.2" />
-		<PackageReference Include="Websocket.Client" Version="4.6.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-	</ItemGroup>
-	<ItemGroup>
-	  <None Remove="Converters\" />
-	</ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <PackageId>realtime-csharp</PackageId>
+        <Authors>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Authors>
+        <Description>Realtime-csharp is written as a client library for supabase/realtime.</Description>
+        <RootNamespace>Supabase.Realtime</RootNamespace>
+        <PackOnBuild>true</PackOnBuild>
+        <Copyright>MIT</Copyright>
+        <NeutralLanguage>en</NeutralLanguage>
+        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Owners>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Owners>
+        <PackageProjectUrl>https://github.com/supabase/realtime-csharp</PackageProjectUrl>
+        <Summary>Realtime-csharp is written as a client library for supabase/realtime.</Summary>
+        <PackageTags>supabase, realtime, phoenix</PackageTags>
+        <Title>realtime-csharp</Title>
+        <PackageVersion>6.0.1</PackageVersion>
+        <ReleaseVersion>6.0.1</ReleaseVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageIcon>icon.png</PackageIcon>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryUrl>https://github.com/supabase/realtime-csharp</RepositoryUrl>
+    </PropertyGroup>
+    <PropertyGroup>
+        <Nullable>enable</Nullable>
+        <LangVersion>latest</LangVersion>
+        <WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
+    </PropertyGroup>
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Version)' == '' ">
+        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">6.0.1</VersionPrefix>
+        <VersionSuffix Condition=" '$(VersionSuffix)' == '' ">
+        </VersionSuffix>
+        <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
+        <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="postgrest-csharp" Version="3.1.3" />
+        <PackageReference Include="supabase-core" Version="0.0.2" />
+        <PackageReference Include="Websocket.Client" Version="4.6.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    </ItemGroup>
+    <ItemGroup>
+        <None Remove="Converters\" />
+        <None Include="..\.github\icon.png" Pack="true" Link="icon.png" PackagePath="\" />
+        <None Include="..\README.md" Pack="true" Link="README.md" PackagePath="\" />
+    </ItemGroup>
 </Project>
