--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -13,7 +13,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Owners>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Owners>
         <PackageProjectUrl>https://github.com/supabase/realtime-csharp</PackageProjectUrl>
-        <Summary>Realtime-csharp is written as a client library for supabase/realtime.</Summary>
+        <Summary>Realtime-csharp is written as a  client library for supabase/realtime.</Summary>
         <PackageTags>supabase, realtime, phoenix</PackageTags>
         <Title>realtime-csharp</Title>
         <PackageVersion>6.0.1</PackageVersion>
@@ -22,6 +22,10 @@
         <PackageIcon>icon.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/supabase/realtime-csharp</RepositoryUrl>
+    </PropertyGroup>
+    <PropertyGroup>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
     <PropertyGroup>
         <Nullable>enable</Nullable>
@@ -39,14 +43,14 @@
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="postgrest-csharp" Version="3.1.3" />
-        <PackageReference Include="supabase-core" Version="0.0.2" />
-        <PackageReference Include="Websocket.Client" Version="4.6.1" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="postgrest-csharp" Version="3.1.3"/>
+        <PackageReference Include="supabase-core" Version="0.0.2"/>
+        <PackageReference Include="Websocket.Client" Version="4.6.1"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
     </ItemGroup>
     <ItemGroup>
-        <None Remove="Converters\" />
-        <None Include="..\.github\icon.png" Pack="true" Link="icon.png" PackagePath="\" />
-        <None Include="..\README.md" Pack="true" Link="README.md" PackagePath="\" />
+        <None Remove="Converters\"/>
+        <None Include="..\.github\icon.png" Pack="true" Link="icon.png" PackagePath="\"/>
+        <None Include="..\README.md" Pack="true" Link="README.md" PackagePath="\"/>
     </ItemGroup>
 </Project>
