--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -16,12 +16,13 @@
         <Summary>Realtime-csharp is written as a  client library for supabase/realtime.</Summary>
         <PackageTags>supabase, realtime, phoenix</PackageTags>
         <Title>realtime-csharp</Title>
-        <PackageVersion>6.0.1</PackageVersion>
-        <ReleaseVersion>6.0.1</ReleaseVersion>
+        <PackageVersion>6.0.2</PackageVersion>
+        <ReleaseVersion>6.0.2</ReleaseVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageIcon>icon.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/supabase/realtime-csharp</RepositoryUrl>
+        <AssemblyName>Supabase.Realtime</AssemblyName>
     </PropertyGroup>
     <PropertyGroup>
         <IncludeSymbols>true</IncludeSymbols>
@@ -36,21 +37,21 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Version)' == '' ">
-        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">6.0.1</VersionPrefix>
+        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">6.0.2</VersionPrefix>
         <VersionSuffix Condition=" '$(VersionSuffix)' == '' ">
         </VersionSuffix>
         <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="postgrest-csharp" Version="3.1.3"/>
-        <PackageReference Include="supabase-core" Version="0.0.2"/>
-        <PackageReference Include="Websocket.Client" Version="4.6.1"/>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
+        <PackageReference Include="postgrest-csharp" Version="3.1.3" />
+        <PackageReference Include="supabase-core" Version="0.0.2" />
+        <PackageReference Include="Websocket.Client" Version="4.6.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     </ItemGroup>
     <ItemGroup>
-        <None Remove="Converters\"/>
-        <None Include="..\.github\icon.png" Pack="true" Link="icon.png" PackagePath="\"/>
-        <None Include="..\README.md" Pack="true" Link="README.md" PackagePath="\"/>
+        <None Remove="Converters\" />
+        <None Include="..\.github\icon.png" Pack="true" Link="icon.png" PackagePath="\" />
+        <None Include="..\README.md" Pack="true" Link="README.md" PackagePath="\" />
     </ItemGroup>
 </Project>
