--- a/Examples/RealtimeExample/RealtimeExample.csproj
+++ b/Examples/RealtimeExample/RealtimeExample.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <ReleaseVersion>4.0.1</ReleaseVersion>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
