--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -1,10 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-        <PackageId>realtime-csharp</PackageId>
+        <Title>Supabase.Realtime</Title>
+        <PackageId>Supabase.Realtime</PackageId>
+        <RootNamespace>Supabase.Realtime</RootNamespace>
+        <AssemblyName>Supabase.Realtime</AssemblyName>
         <Authors>Joseph Schultz &lt;joseph@acupofjose.com&gt;</Authors>
         <Description>Realtime-csharp is written as a client library for supabase/realtime.</Description>
-        <RootNamespace>Supabase.Realtime</RootNamespace>
         <PackOnBuild>true</PackOnBuild>
         <Copyright>MIT</Copyright>
         <NeutralLanguage>en</NeutralLanguage>
@@ -14,14 +16,12 @@
         <PackageProjectUrl>https://github.com/supabase/realtime-csharp</PackageProjectUrl>
         <Summary>Realtime-csharp is written as a  client library for supabase/realtime.</Summary>
         <PackageTags>supabase, realtime, phoenix</PackageTags>
-        <Title>realtime-csharp</Title>
-        <PackageVersion>6.0.4</PackageVersion>
-        <ReleaseVersion>6.0.4</ReleaseVersion>
+        <PackageVersion>7.0.0</PackageVersion>
+        <ReleaseVersion>7.0.0</ReleaseVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageIcon>icon.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/supabase/realtime-csharp</RepositoryUrl>
-        <AssemblyName>Supabase.Realtime</AssemblyName>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -31,21 +31,22 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Version)' == '' ">
-        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">6.0.4</VersionPrefix>
+        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">7.0.0</VersionPrefix>
         <VersionSuffix Condition=" '$(VersionSuffix)' == '' "></VersionSuffix>
         <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="postgrest-csharp" Version="3.4.0" />
-        <PackageReference Include="supabase-core" Version="0.0.3" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Supabase.Core" Version="1.0.0" />
+        <PackageReference Include="Supabase.Postgrest" Version="4.0.0" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
         <PackageReference Include="Websocket.Client" Version="4.7.0" />
     </ItemGroup>
+    
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
         <PackageReference Include="Websocket.Client" Version="5.1.1" />
     </ItemGroup>
