[Re:#167](https://github.com/supabase-community/supabase-csharp/issues/167) Adds support for specifying `GetHeaders` on the `RealtimeClient` which are included on the initial request to the server to establish websocket connection.

--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -38,9 +38,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="RealtimeTests" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Supabase.Core" Version="1.0.0" />
-        <PackageReference Include="Supabase.Postgrest" Version="4.0.0" />
+        <PackageReference Include="Supabase.Postgrest" Version="4.0.3" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
