--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,6 +22,16 @@ jobs:
 
       - name: Build
         run: dotnet build --configuration Release --no-restore
+      
+      - uses: supabase/setup-cli@v1
+        with:
+          version: latest
+
+      - name: Start Supabsae
+        run: supabase start
+
+      - name: Test
+        run: dotnet test --no-restore
 
       #- name: Add hosts entries
       #  run: |
