--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - master
       - release/*
 
 permissions:
@@ -14,6 +14,8 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-actions@v4
+      - uses: googleapis/release-please-action@v4 
         with:
           target-branch: ${{ github.ref_name }}
+          manifest-file: .release-please-manifest.json
+          config-file: release-please-config.json
