--- a/Realtime/Realtime.csproj
+++ b/Realtime/Realtime.csproj
@@ -16,8 +16,10 @@
         <PackageProjectUrl>https://github.com/supabase/realtime-csharp</PackageProjectUrl>
         <Summary>Realtime-csharp is written as a  client library for supabase/realtime.</Summary>
         <PackageTags>supabase, realtime, phoenix</PackageTags>
+        <!-- x-release-please-start-version -->
         <PackageVersion>7.1.0</PackageVersion>
         <ReleaseVersion>7.1.0</ReleaseVersion>
+        <!-- x-release-please-end -->
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageIcon>icon.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -31,7 +33,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Version)' == '' ">
-        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">7.1.0</VersionPrefix>
+        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">7.1.0</VersionPrefix> <!-- x-release-please-version -->
         <VersionSuffix Condition=" '$(VersionSuffix)' == '' "></VersionSuffix>
         <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
