--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,9 +6,11 @@
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
       "prerelease": false,
-      "release-type": "simple"
+      "release-type": "simple",
+      "extra-files": [
+        "Realtime/Realtime.csproj"
+      ]
     }
   },
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "last-release-sha": "60bd77ac56a40c89bd0de75c5be221187cf7f493"
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
